--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "cors":"^2.8.5",
     "mongo": "^0.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
